<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE792"
    tools:context=".view.habit.CreateEditHabitFragment">


    <TextView
        android:id="@+id/reminder_label"
        android:layout_width="382dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/caveat"
        android:text="Which days of the week would you like to do it?"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/date_started_layout"
        app:layout_constraintTop_toBottomOf="@+id/date_started_layout" />

    <EditText
        android:id="@+id/edit_text_reason"
        android:layout_width="333dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/caveat"
        android:hint="@string/reason"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/edit_text_title"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="254dp"
        android:layout_height="106dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/caveat"
        android:hint="@string/title"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/date_started_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/date_started_label"
        app:layout_constraintTop_toBottomOf="@+id/date_started_label">


        <TextView
            android:id="@+id/text_date_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="October 23, 2021" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:src="@drawable/ic_baseline_edit_24" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/reminder_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/reminder_label"
        app:layout_constraintTop_toBottomOf="@+id/reminder_label">

        <TextView
            android:id="@+id/days_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/button_add_habit"
            tools:text="Mon Wed Fri" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:src="@drawable/ic_baseline_edit_24" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/button_add_habit"
        android:layout_width="359dp"
        android:layout_height="94dp"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        android:layout_marginBottom="108dp"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="@font/caveat"
        android:text="@string/add_habit"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/reminder_layout" />

    <CheckBox
        android:id="@+id/private_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/caveat"
        android:text="@string/isPrivate"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_title"
        app:layout_constraintStart_toEndOf="@+id/edit_text_title" />

    <TextView
        android:id="@+id/date_started_label"
        android:layout_width="285dp"
        android:layout_height="0dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/caveat"
        android:text="When do you want to start it?"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/edit_text_reason"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_reason" />

</androidx.constraintlayout.widget.ConstraintLayout>