<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE792"
    android:orientation="vertical"
    tools:context=".view.habit.ViewHabitFragment">


    <LinearLayout
        android:id="@+id/habitDataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        android:layout_marginTop="@dimen/fragment_bottom_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/dateStartedLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat"
            android:textColor="#000000"
            android:textSize="28sp"
            tools:text="Habit Title" />

        <TextView
            android:id="@+id/view_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat"
            android:textSize="24sp"
            tools:text="Habit Reason" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateStartedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/reminderLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habitDataLayout">

        <TextView
            android:id="@+id/view_date_started_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/caveat"
            android:text="@string/date_started"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/view_date_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat"
            android:textSize="20sp"
            tools:text="October 23, 2021" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reminderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/consistencyLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateStartedLayout">

        <TextView
            android:id="@+id/view_reminder_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/caveat"
            android:text="@string/reminder_label"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/view_reminder" />

        <TextView
            android:id="@+id/view_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat"
            android:textSize="20sp"
            tools:text="Mon Wed Fri" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/consistencyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/privacyLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderLayout">

        <TextView
            android:id="@+id/view_consistency_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/caveat"
            android:text="@string/consistency"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/view_reminder" />

        <TextView
            android:id="@+id/view_consistency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat"
            android:textSize="20sp"
            tools:text="87%" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/habit_event_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consistencyLayout">

        <TextView
            android:id="@+id/view_privacy_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:fontFamily="@font/caveat"
            android:text="@string/visibility"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/view_reminder" />

        <TextView
            android:id="@+id/view_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat"
            android:textSize="20sp"
            tools:text="Private" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/habit_event_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@+id/button_new_habit_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacyLayout"
        tools:itemCount="5"
        tools:listitem="@layout/list_habit_event_item" />

    <Button
        android:id="@+id/button_new_habit_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="@font/caveat"
        android:text="@string/new_event"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_edit_habit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_event_list" />

    <Button
        android:id="@+id/button_edit_habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="@font/caveat"
        android:text="@string/edit_habit"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_delete_habit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_new_habit_event" />


    <Button
        android:id="@+id/button_delete_habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="@font/caveat"
        android:text="@string/delete"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edit_habit" />


</androidx.constraintlayout.widget.ConstraintLayout>