<resources>
    <string name="app_name">HelloHabits</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="todays_habits_fragment_label">Today\'s Habits</string>
    <string name="create_edit_habit_fragment_label">Habit</string>
    <string name="new_habit">New Habit</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="back">Back</string>


    <string name="title">Title</string>
    <string name="reason">Reason</string>
    <string name="delete">DELETE</string>
    <string name="add_habit_event">Save Habit Event</string>
    <string name="delete_habit_event">Delete Habit Event</string>
    <string name="comment">Comment</string>
    <string name="add_location">Add Location</string>
    <string name="remove_location">Remove Location</string>
    <string name="add_photo">Add Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="add_habit">Add Habit</string>
    <string name="save_changes">Save Changes</string>
    <string name="days_of_week">Reminder</string>
    <string name="date_started">Date started:</string>
    <string name="new_event">New Event</string>
    <string name="view_events">View Events</string>
    <string name="reminder_label">Reminder:</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="view_all_habits">View All Habits</string>
    <string name="new_habit_event">New Event</string>
    <string name="todo">TODO</string>
    <string-array name="days_in_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="social">Social</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign out</string>
    <string name="consistency">Consistency:</string>
    <string name="isPrivate">Private</string>
    <string name="isPublic">Public</string>
    <string name="visibility">Visibility:</string>
    <string name="check_box">check box</string>
    <string name="edit_button">Edit button</string>
    <string name="delete_button">Delete button</string>
    <string name="today_s_habits">Today\'s Habits</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="all_habits">All Habits</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_habits">Hello Habits</string>
    <string name="team_str">CMPUT 301 Fall 2021 Team 44</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="reorder_habits">Reorder habits</string>

    <string name="priority">Priority</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="all_users">All Users</string>
    <string name="cancel">Cancel</string>
    <string name="request">Request</string>
    <string name="follow">Follow</string>
    <string name="requested">Requested</string>
    <string name="reorder_list">Reorder List</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="now">now!</string>
    <string name="back_to">Back to</string>
    <string name="get_from_camera">take photo from camera</string>
    <string name="event_picture">event picture</string>
    <string name="get_from_gallery">add photo from gallery</string>
    <string name="remember_password">Remember password</string>
    <string name="location">Location</string>
    <!-- Resource ID for tags -->
    <id name="priority" />
    <id name="habit_id" />
</resources>