<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/TodaysHabitsFragment"
            android:icon="@drawable/ic_baseline_today_24"
            android:title="@string/today_s_habits" />
        <item
            android:id="@+id/AllHabitsFragment"
            android:icon="@drawable/ic_baseline_check_circle_24"
            android:title="@string/all_habits" />
        <item
            android:id="@+id/FollowersFragment"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/followers" />
        <item
            android:id="@+id/FollowingFragment"
            android:icon="@drawable/ic_baseline_people_outline_24"
            android:title="@string/following" />
        <item
            android:id="@+id/AllUsersFragment"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/all_users" />
    </group>
</menu>